# zk-ml-dialect

./: CMakeLists.txt  README.md
include/Dialect/zkml/: ZkMlDialect.h
include/Dialect/zkml/Ops/Gather/: Gather.h  Gather.h.inc
include/mlir/Dialect/zkml/: ZkMlDialect.h  ZkMlDialect.h.inc  ZkMlOps.h
include/mlir/Dialect/zkml/IR/: ArgMax.h  ArgMin.h  CmpSet.h  DotProduct.h  ExpNoClip.h  Gather.h  OnnxAmount.h  Trace.h  Trigonometric.h  ZkMlAttributes.h
include/mlir/Dialect/zkml/Ops/Gather/: Gather.h
src/Dialect/zkml/: ZkMlDialect.cpp
src/Dialect/zkml/IR/Gather/: Gather.cpp.inc
src/mlir/Dialect/zkml/: ZkMlDialect.cpp  ZkMlDialect.cpp.inc
tablegen/: Gather.tb  ZkMlDialect.tb
tablegen/mlir/Dialect/: CMakeLists.txt
tablegen/mlir/Dialect/zkml/: CMakeLists.txt  ZkMlDialect.td
tablegen/mlir/Dialect/zkml/IR/: ArgMax.td  ArgMin.td  CMakeLists.txt  CmpSet.td  DotProduct.td  ExpNoClip.td  Gather.td  OnnxAmount.td  Trace.td  Trigonometric.td  ZkMlAttributes.td
